--- a/docs/erc.css
+++ b/docs/erc.css
@@ -80,3 +80,12 @@ h2 {
     margin-top: 2em;
     padding-top: 1em;
 }
+
+.caption {
+    font-size: 0.95em;
+    margin-top: -1em;
+    color: rgba(67,69,83,1);
+    text-align: center;
+    font-style: italic;
+    border-bottom: 1px solid rgba(67,69,83,0.4);
+}
